--- a/src/main/resources/templates/crear_rol.html
+++ b/src/main/resources/templates/crear_rol.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Crear Rol</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 
-<h2>Crear Nuevo Rol</h2>
-    <form th:action="@{/roles/guardar}" th:object="${rol}" method="post"> <!-- action="/roles/guardar"/-->
-        <label for="rol">Rol:</label>
-        <input type="text" id="rol" th:field="'*{rol}'" name="rol" placeholder="Escriba Rol"><br><br>
-        <input type="submit" value="Guardar">
-    </form>
-    <a href="/roles/listar">Volver a la lista de roles</a>
-</body>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <a class="navbar-brand" href="#">FACTX</a>
 
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/roles/listar}">Roles</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container">
+    <h2>Crear Nuevo Rol</h2>
+    <form th:action="@{/roles}" th:object="${rol}" method="post">
+        <label for="rol">Rol:</label>
+        <input type="text" id="rol" th:field="*{rol}" name="rol" placeholder="Escriba Rol" class="form-control"><br><br>
+        <input type="submit" value="Guardar" class="btn btn-primary">
+    </form>
+    <a th:href="@{/roles/listar}">Volver a la lista de roles</a>
+</div>
+
+</body>
 </html>
