--- a/src/main/resources/templates/listar_roles.html
+++ b/src/main/resources/templates/listar_roles.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Lista de Roles</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-<h2>Lista de Roles</h2>
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="rol : ${roles}">
-        <td th:text="${rol.id_rol}">ID</td>
-        <td th:text="${rol.rol}">Rol</td>
-    </tr>
-    </tbody>
-</table>
-<a href="/roles/crear">Crear Nuevo Rol</a>
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <a class="navbar-brand" href="#">FACTX</a>
+
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/roles/listar}">Roles</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container">
+    <h2>Lista de Roles</h2>
+    <a href="/roles/crear" class="btn btn-primary mb-3">Crear Nuevo Rol</a>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="rol : ${roles}">
+            <td th:text="${rol.id_rol}">ID</td>
+            <td th:text="${rol.rol}">Rol</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
