--- a/src/main/resources/templates/editar_rol.html
+++ b/src/main/resources/templates/editar_rol.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Crear Rol</title>
+    <title>Editar Rol</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/roles}">Roles</a>
+                    <a class="nav-link" th:href="@{/roles/listar}">Roles</a>
                 </li>
             </ul>
         </div>
@@ -27,8 +27,8 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="mb-4 text-center">Crear Nuevo Rol</h2>
-            <form th:action="@{/roles}" th:object="${rol}" method="post" class="needs-validation" novalidate>
+            <h2 class="mb-4 text-center">Editar Rol</h2>
+            <form th:action="@{/roles/{id}(id=${rol.id_rol})}" th:object="${rol}" method="post" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="rol" class="form-label">Rol:</label>
                     <input type="text" id="rol" th:field="*{rol}" name="rol" placeholder="Escriba Rol"
