--- a/src/main/resources/templates/crear_usuario.html
+++ b/src/main/resources/templates/crear_usuario.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Crear Usuario</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 <h2>Crear Nuevo Usuario</h2>
-<form action="/usuarios/guardar" method="post" th:object="${usuario}">
+<form th:action="@{/usuarios}" th:object="${usuario}" method="post">
 
     <label for="nombre">Nombre:</label>
     <input type="text" id="nombre" th:field="*{nombre}"><br><br>
@@ -22,17 +25,17 @@
 
     <label for="empresa">Empresa:</label>
     <select id="empresa" th:field="*{empresa}">
-        <option value="0" selected>Selecciona una Empresa</option>
-        <option value="1">Empresa 1</option>
-        <option value="2">Empresa 2</option>
+        <option value="" selected>Selecciona una Empresa</option>
+        <option th:each="empresa : ${empresas}" th:value="${empresa.id_empresa}"
+                th:text="${empresa.razon_social}"></option>
     </select><br><br>
 
     <label for="rol">Rol:</label>
     <select id="rol" th:field="*{rol}">
-        <option value="0" selected>Selecciona un Rol</option>
-        <option value="1">Administrador</option>
-        <option value="2">Cajero</option>
+        <option value="" selected>Selecciona un Rol</option>
+        <option th:each="rol : ${roles}" th:value="${rol.id_rol}" th:text="${rol.rol}"></option>
     </select><br><br>
+
 
     <input type="submit" value="Guardar">
 </form>
