--- a/src/main/resources/templates/listar_usuarios.html
+++ b/src/main/resources/templates/listar_usuarios.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Lista de Roles</title>
+    <title>Lista de Usuarios</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
@@ -27,37 +28,48 @@
     </div>
 </nav>
 
+
 <div class="container mt-4">
     <div class="row">
         <div class="col">
-            <h2 class="mb-3">Lista de Roles</h2>
-            <a th:href="@{/roles/crear}" class="btn btn-primary mb-3">Crear Nuevo Rol</a>
+            <h2 class="mb-3">Lista de Usuarios</h2>
+            <a th:href="@{/usuarios/crear}" class="btn btn-primary mb-3">Crear Nuevo Usuario</a>
+
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <thead class="table-dark">
                     <tr>
                         <th>ID</th>
                         <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Usuario</th>
+                        <th>Empresa</th>
+                        <th>Rol</th>
                         <th>Acciones</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="rol : ${roles}">
-                        <td th:text="${rol.id_rol}">ID</td>
-                        <td th:text="${rol.rol}">Rol</td>
+                    <tr th:each="usuario : ${usuarios}">
+                        <td th:text="${usuario.id_usuario}">ID</td>
+                        <td th:text="${usuario.nombre}">Nombre</td>
+                        <td th:text="${usuario.apellido}">Apellido</td>
+                        <td th:text="${usuario.usuario}">Usuario</td>
+                        <td th:text="${usuario.empresa.razon_social}">Empresa</td>
+                        <td th:text="${usuario.rol.rol}">Rol</td>
                         <td>
-                            <a th:href="@{/roles/editar/{id}(id=${rol.id_rol})}" class="btn btn-info btn-sm">Editar</a>
-                            <a th:href="@{/roles/{id}(id=${rol.id_rol})}" class="btn btn-danger btn-sm">Eliminar</a>
+                            <a th:href="@{/usuarios/editar/{id}(id=${usuario.id_usuario})}" class="btn btn-info btn-sm">Editar</a>
+                            <a th:href="@{/usuarios/{id}(id=${usuario.id_usuario})}" class="btn btn-danger btn-sm">Eliminar</a>
                         </td>
                     </tr>
                     </tbody>
+
                 </table>
+
             </div>
+
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
