--- a/src/main/resources/templates/crear_rol.html
+++ b/src/main/resources/templates/crear_rol.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Crear Rol</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
@@ -20,6 +21,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/roles}">Roles</a>
+                    <a class="nav-link" th:href="@{/usuarios}">Usuarios</a>
                 </li>
             </ul>
         </div>
@@ -30,17 +32,22 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="mb-4 text-center">Crear Nuevo Rol</h2>
-            <form th:action="@{/roles}" th:object="${rol}" method="post" class="needs-validation" novalidate>
+
+            <form th:action="@{/roles}" th:object="${rol}"
+                  method="post" class="needs-validation" novalidate>
+
                 <div class="mb-3">
                     <label for="rol" class="form-label">Rol:</label>
-                    <input type="text" id="rol" th:field="*{rol}" name="rol" placeholder="Escriba Rol"
+                    <input type="text" id="rol" th:field="*{rol}" name="rol"
+                           placeholder="Escriba Rol"
                            class="form-control" required>
                     <div class="invalid-feedback">
                         Por favor, ingrese un nombre de rol.
                     </div>
                 </div>
+
                 <div class="d-grid">
-                    <input type="submit" value="Guardar" class="btn btn-primary">
+                    <button type="submit" class="btn btn-primary">Guardar</button>
                 </div>
             </form>
             <div class="mt-3 text-center">
@@ -49,8 +56,6 @@
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
+
 </html>
