--- a/src/main/resources/templates/editar_usuario.html
+++ b/src/main/resources/templates/editar_usuario.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Crear Usuario</title>
+    <title>Editar Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -28,19 +27,12 @@
     </div>
 </nav>
 
-<div th:if="${success}">
-    <div class="alert alert-success" th:text="${success}"></div>
-</div>
-<div th:if="${error}">
-    <div class="alert alert-danger" th:text="${error}"></div>
-</div>
-
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="mb-4 text-center">Crear Nuevo Usuario</h2>
+            <h2 class="mb-4 text-center">Editar Usuario</h2>
 
-            <form th:action="@{/usuarios}" th:object="${usuario}" id="miFormulario"
+            <form th:action="@{/usuarios/{id}(id=${usuario.id_usuario})}" th:object="${usuario}"
                   method="post" class="needs-validation" novalidate>
 
                 <div class="mb-3">
@@ -85,9 +77,11 @@
 
                 <div class="mb-3">
                     <label for="empresa" class="form-label">Empresa:</label>
-                    <select id="empresa" name="empresa.id_empresa" class="form-select" required>
+                    <select id="empresa" th:field="*{empresa.id_empresa}" class="form-select" required>
                         <option value="" selected>Selecciona una Empresa</option>
-                        <option th:each="empresa : ${empresas}" th:value="${empresa.id_empresa}"
+                        <option th:each="empresa : ${empresas}"
+                                th:value="${empresa.id_empresa}"
+                                th:selected="${empresa.id_empresa} == ${usuario.empresa.id_empresa}"
                                 th:text="${empresa.razon_social}"></option>
                     </select>
                     <div class="invalid-feedback">
@@ -97,9 +91,12 @@
 
                 <div class="mb-3">
                     <label for="rol" class="form-label">Rol:</label>
-                    <select id="rol" name="rol.id_rol" class="form-select" required>
+                    <select id="rol" th:field="*{rol.id_rol}" class="form-select" required>
                         <option value="" selected>Selecciona un Rol</option>
-                        <option th:each="rol : ${roles}" th:value="${rol.id_rol}" th:text="${rol.rol}"></option>
+                        <option th:each="rol : ${roles}"
+                                th:value="${rol.id_rol}"
+                                th:selected="${rol.id_rol} == ${usuario.rol.id_rol}"
+                                th:text="${rol.rol}"></option>
                     </select>
                     <div class="invalid-feedback">
                         Por favor, seleccione un rol.
@@ -116,6 +113,6 @@
         </div>
     </div>
 </div>
-</body>
 
+</body>
 </html>
