--- a/src/main/resources/templates/administradores/inventario.html
+++ b/src/main/resources/templates/administradores/inventario.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inventario</title>
+    <title>Listar Productos</title>
 
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -44,13 +44,22 @@
             </form>
             <div class="d-flex flex-wrap gap-3 mt-4">
                 <div th:each="producto : ${productos}">
-                    <div class="card" style="width: 15rem;">
+                    <div class="card mb-3" style="width: 18rem;">
                         <div class="card-body">
-                            <h5 class="card-title" th:text="${producto.producto}">[Producto]</h5>
-                            <h6 class="card-subtitle mb-2 text-body-secondary" th:text="${producto.categoria.categoria}">[Categoría]</h6>
-                            <p class="card-text" th:text="${producto.id_producto}">[ID]</p>
-                            <p class="card-text" th:text="${producto.precio}">[Precio]</p>
-                            <p class="card-text" th:text="${producto.cantidad}">[Cantidad]</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>
+                                    <h5 class="card-title mb-0" th:text="${producto.producto}">[Producto]</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted" th:text="${producto.categoria.categoria}">
+                                        [Categoría]</h6>
+                                </div>
+                                <img th:src="${producto.icono}" alt="Imagen del Producto" class="img-fluid" style="width: 50px; height: 50px;"
+                                     onerror="this.onerror=null;this.src='/static/producto.png';">
+                            </div>
+                            <p class="card-text mt-2">
+                                <strong>ID:</strong> <span th:text="${producto.id_producto}">[ID]</span><br>
+                                <strong>Precio:</strong> $<span th:text="${producto.precio}">[Precio]</span><br>
+                                <strong>Cantidad:</strong> <span th:text="${producto.cantidad}">[Cantidad]</span>
+                            </p>
                             <a href="#" class="card-link">Editar</a>
                             <a href="#" class="card-link">Eliminar</a>
                         </div>
@@ -59,6 +68,7 @@
             </div>
         </div>
     </div>
+</div>
 
 
 </div>
