--- a/src/main/resources/templates/productos/productos.html
+++ b/src/main/resources/templates/productos/productos.html
@@ -52,7 +52,8 @@
                                     <h6 class="card-subtitle mb-2 text-muted" th:text="${producto.categoria.categoria}">
                                         [Categoría]</h6>
                                 </div>
-                                <img th:src="${producto.icono}" alt="Imagen del Producto" class="img-fluid" style="width: 50px; height: 50px;"
+                                <img th:src="@{${producto.icono}}" alt="Imagen del Producto" class="img-fluid"
+                                     style="width: 70px; height: 70px;"
                                      onerror="this.onerror=null;this.src='/static/producto.png';">
                             </div>
                             <p class="card-text mt-2">
@@ -69,10 +70,5 @@
         </div>
     </div>
 </div>
-
-
-</div>
-
-
 </body>
 </html>
