--- a/src/main/resources/templates/administradores/administradores.html
+++ b/src/main/resources/templates/administradores/administradores.html
@@ -64,7 +64,7 @@
                     <a th:href="@{/facturacion}" class="btn btn-lg btn-secondary w-100 py-4">Facturación</a>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <a th:href="@{/inventario}" class="btn btn-lg btn-secondary w-100 py-4">Inventario</a>
+                    <a th:href="@{/inventario/productos}" class="btn btn-lg btn-secondary w-100 py-4">Inventario</a>
                 </div>
                 <div class="col-md-6 mb-3">
                     <button class="btn btn-lg btn-secondary w-100 py-4">Personal</button>
