--- a/src/main/resources/templates/productos/crear_producto.html
+++ b/src/main/resources/templates/productos/crear_producto.html
@@ -27,7 +27,7 @@
 
                 <div class="mb-3">
                     <label for="producto" class="form-label">Nombre del Producto:</label>
-                    <input type="text" id="producto" th:field="*{producto}" name="producto"
+                    <input type="text" id="producto" name="producto" th:field="*{producto}"
                            placeholder="Escriba el Nombre del Producto"
                            class="form-control" required>
                     <div class="invalid-feedback">
@@ -37,7 +37,7 @@
 
                 <div class="mb-3">
                     <label for="descripcion" class="form-label">Descripción:</label>
-                    <textarea type="text" id="descripcion" th:field="*{descripcion}" name="descripcion"
+                    <textarea type="text" id="descripcion" name="descripcion" th:field="*{descripcion}"
                               placeholder="Escriba la Descripcion"
                               class="form-control" rows="3" required></textarea>
                     <div class="invalid-feedback">
@@ -59,13 +59,15 @@
 
                 <div class="mb-3">
                     <label class="form-label">Icono:</label>
-                    <input type="file" name="icono" class="form-control" aria-label="file example" required>
+                    <input type="file" id="icono" name="icono" th:field="*{icono}"
+                           class="form-control"
+                           aria-label="file example" required>
                     <div class="invalid-feedback">Example invalid form file feedback</div>
                 </div>
 
                 <div class="mb-3">
                     <label for="precio" class="form-label">Precio:</label>
-                    <input type="text" id="precio" th:field="*{precio}" name="precio"
+                    <input type="number" step="0.01" id="precio" name="precio" th:field="*{precio}"
                            placeholder="Escriba el Precio"
                            class="form-control" required>
                     <div class="invalid-feedback">
@@ -75,7 +77,7 @@
 
                 <div class="mb-3">
                     <label for="cantidad" class="form-label">Cantidad:</label>
-                    <input type="text" id="cantidad" th:field="*{cantidad}" name="cantidad"
+                    <input type="number" id="cantidad" name="cantidad" th:field="*{cantidad}"
                            placeholder="Escriba la Cantidad"
                            class="form-control" required>
                     <div class="invalid-feedback">
