--- a/src/main/resources/templates/productos/productos.html
+++ b/src/main/resources/templates/productos/productos.html
@@ -25,8 +25,10 @@
                  class="img-fluid mb-1" width="200" height="200">
         </div>
 
-        <div class="col-md-7 text-start">
-            <h1>Lista de Productos</h1>
+        <div class="col-md-8 d-flex justify-content-between align-items-center">
+            <h1 class="mb-0">Lista de Productos</h1>
+            <a th:href="@{/inventario/productos/crear}" class="btn btn-outline-secondary ms-auto">Añadir Producto</a>
+
         </div>
     </div>
 
@@ -52,9 +54,12 @@
                                     <h6 class="card-subtitle mb-2 text-muted" th:text="${producto.categoria.categoria}">
                                         [Categoría]</h6>
                                 </div>
-                                <img th:src="@{${producto.icono}}" alt="Imagen del Producto" class="img-fluid"
-                                     style="width: 70px; height: 70px;"
-                                     onerror="this.onerror=null;this.src='/static/producto.png';">
+
+
+                                <img th:src="@{'http://localhost:8080' + ${producto.icono}}" alt="Imagen del Producto"
+                                     class="img-fluid"
+                                     style="width: 70px; height: 70px;">
+
                             </div>
                             <p class="card-text mt-2">
                                 <strong>ID:</strong> <span th:text="${producto.id_producto}">[ID]</span><br>
