--- a/src/main/resources/templates/inicio_sesion.html
+++ b/src/main/resources/templates/inicio_sesion.html
@@ -27,6 +27,9 @@
             <div class="card">
                 <div class="card-header text-center">
                     <h2>Iniciar sesión</h2>
+                    <div th:if="${session.message}">
+                        <p th:text="${session.message}"></p>
+                    </div>
                 </div>
                 <div class="card-body">
                     <form th:action="@{/inicio_sesion}" method="post">
