Changes, revisar editar producto

--- a/src/main/resources/templates/administradores/navbar_administradores.html
+++ b/src/main/resources/templates/administradores/navbar_administradores.html
@@ -42,8 +42,8 @@
             <!-- Menú vertical a la derecha -->
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <p class="nav-link mb-0">[Nombre del Usuario en la Sesión]</p>
-                    <!--th:text="${#session.usuario?.nombre}"-->
+                    <p th:text="${usuario.nombre} + ' ' + ${usuario.apellido}" class="nav-link mb-0">[Nombre del Usuario
+                        en la Sesión]</p>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/iniciar_sesion}">Cerrar Sesion</a>
