--- a/src/main/resources/templates/administradores/administradores.html
+++ b/src/main/resources/templates/administradores/administradores.html
@@ -22,14 +22,13 @@
 </nav>
 
 <!-- Contenido principal -->
-<div class="container-fluid mt-4">
+<div class="container mt-4">
     <div class="row mb-4 align-items-center">
         <div class="col-md-4 text-center">
             <!-- Logo de la Empresa -->
             <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
                  class="img-fluid mb-1" width="300" height="300">
         </div>
-
         <div class="col-md-8 text-start">
             <h1 th:text="${usuario.empresa.razon_social}">[Nombre de la Empresa]</h1>
             <p>
@@ -59,34 +58,28 @@
 
         <div class="col-md-8">
             <!-- Botones de Facturación y Listar Usuarios -->
-            <div class="row mt-1">
-                <div class="col-md-6 mb-3">
+            <div class="row g-3">
+                <div class="col-md-6">
                     <a th:href="@{/facturacion}" class="btn btn-lg btn-secondary w-100 py-4">Facturación</a>
                 </div>
-                <div class="col-md-6 mb-3">
-                    <a th:href="@{/inventario/productos}" class="btn btn-lg btn-secondary w-100 py-4">Inventario</a>
+                <div class="col-md-6">
+                    <a th:href="@{/inventario}" class="btn btn-lg btn-secondary w-100 py-4">Inventario</a>
                 </div>
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6">
                     <button class="btn btn-lg btn-secondary w-100 py-4">Personal</button>
                 </div>
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6">
                     <button class="btn btn-lg btn-secondary w-100 py-4">Clientes</button>
                 </div>
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6">
                     <button class="btn btn-lg btn-secondary w-100 py-4">Empresas</button>
                 </div>
-                <div class="col-md-6 mb-3">
-                    <button class="btn btn-lg btn-secondary w-100 py-4">Cerrar Sesión</button>
+                <div class="col-md-6">
+                    <a th:href="@{/cerrar_sesion}" class="btn btn-lg btn-secondary w-100 py-4">Cerrar Sesión</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<!-- Scripts de Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
 </body>
 </html>
