--- a/src/main/resources/templates/inventario/crear_producto.html
+++ b/src/main/resources/templates/inventario/crear_producto.html
@@ -10,14 +10,12 @@
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 <body>
 
 <div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
 
-
-<div class="container-fluid mt-4">
+<div class="container mt-4">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="mb-4 text-center">Añadir Nuevo Producto</h2>
@@ -38,31 +36,31 @@
                 <div class="mb-3">
                     <label for="descripcion" class="form-label">Descripción:</label>
                     <textarea type="text" id="descripcion" name="descripcion" th:field="*{descripcion}"
-                              placeholder="Escriba la Descripcion"
+                              placeholder="Escriba la Descripción"
                               class="form-control" rows="3" required></textarea>
                     <div class="invalid-feedback">
-                        Por favor, ingrese la descripcion.
+                        Por favor, ingrese la descripción.
                     </div>
                 </div>
 
                 <div class="mb-3">
-                    <label for="categoria" class="form-label">Categoria:</label>
-                    <select id="categoria" name="categoria.id_categoria" class="form-select" required>
+                    <label for="categoria" class="form-label">Categoría:</label>
+                    <select id="categoria" name="categoria.id_categoria" th:field="*{categoria.id_categoria}"
+                            class="form-select" required>
                         <option value="" selected>Selecciona una Categoría</option>
                         <option th:each="categoria : ${categorias}" th:value="${categoria.id_categoria}"
                                 th:text="${categoria.categoria}"></option>
                     </select>
                     <div class="invalid-feedback">
-                        Por favor, una categoría
+                        Por favor, seleccione una categoría.
                     </div>
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label">Icono:</label>
+                    <label for="icono" class="form-label">Icono:</label>
                     <input type="file" id="icono" name="icono" th:field="*{icono}"
-                           class="form-control"
-                           aria-label="file example" required>
-                    <div class="invalid-feedback">Example invalid form file feedback</div>
+                           class="form-control" aria-label="file example" required>
+                    <div class="invalid-feedback">Por favor, seleccione un icono.</div>
                 </div>
 
                 <div class="mb-3">
@@ -71,7 +69,7 @@
                            placeholder="Escriba el Precio"
                            class="form-control" required>
                     <div class="invalid-feedback">
-                        Por favor, ingrese el nombre.
+                        Por favor, ingrese el precio.
                     </div>
                 </div>
 
@@ -81,7 +79,7 @@
                            placeholder="Escriba la Cantidad"
                            class="form-control" required>
                     <div class="invalid-feedback">
-                        Por favor, ingrese el nombre.
+                        Por favor, ingrese la cantidad.
                     </div>
                 </div>
 
@@ -92,5 +90,34 @@
         </div>
     </div>
 </div>
+
+<!-- Scripts de Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+<script>
+    // Ejemplo de JavaScript para validación de formularios
+    (function () {
+        'use strict'
+
+        // Obtener todos los formularios a los que queremos aplicar estilos de validación de Bootstrap personalizados
+        var forms = document.querySelectorAll('.needs-validation')
+
+        // Bucle sobre ellos y evitar el envío
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+    })()
+</script>
+
 </body>
 </html>
