--- a/src/main/resources/templates/inventario/productos.html
+++ b/src/main/resources/templates/inventario/productos.html
@@ -3,50 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Listar Productos</title>
 
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 <body>
 
 <div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
 
-<div class="container-fluid mt-4">
+<div class="container mt-4">
     <div class="row mb-4 align-items-center">
         <!-- Logo de la Empresa -->
         <div class="col-md-3 text-center">
-            <!-- Logo de la Empresa -->
             <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
                  class="img-fluid mb-1" width="200" height="200">
         </div>
 
-        <div class="col-md-8 d-flex justify-content-between align-items-center">
+        <div class="col-md-9 d-flex justify-content-between align-items-center">
             <h1 class="mb-0">Lista de Productos</h1>
             <a th:href="@{/inventario/productos/crear}" class="btn btn-outline-secondary ms-auto">Añadir Producto</a>
-
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-3 text-center">
+        <div class="col-md-3">
             <div th:insert="~{administradores/navbar_vertical_inventario :: navbar_vertical}"></div>
         </div>
 
-
-        <div class="col-md-8">
+        <div class="col-md-9">
             <form class="d-flex mb-3" role="search">
                 <input class="form-control me-2" type="search" placeholder="Buscar por Nombre"
-                       aria-label="Search">
+                       aria-label="Buscar">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
-            <div class="d-flex flex-wrap gap-3 mt-4">
-                <div th:each="producto : ${productos}">
-                    <div class="card mb-3" style="width: 18rem;">
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div th:each="producto : ${productos}" class="col">
+                    <div class="card h-100">
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
@@ -54,27 +51,35 @@
                                     <h6 class="card-subtitle mb-2 text-muted" th:text="${producto.categoria.categoria}">
                                         [Categoría]</h6>
                                 </div>
-
-
                                 <img th:src="@{'http://localhost:8080' + ${producto.icono}}" alt="Imagen del Producto"
-                                     class="img-fluid"
-                                     style="width: 70px; height: 70px;">
-
+                                     class="img-fluid" style="width: 70px; height: 70px;">
                             </div>
                             <p class="card-text mt-2">
                                 <strong>ID:</strong> <span th:text="${producto.id_producto}">[ID]</span><br>
                                 <strong>Precio:</strong> $<span th:text="${producto.precio}">[Precio]</span><br>
-                                <strong>Cantidad:</strong> <span th:text="${producto.cantidad}">[Cantidad]</span>
+                                <strong>Cantidad:</strong> <span th:text="${producto.cantidad}">[Cantidad]</span><br>
+                                <strong>Descripción:</strong> <span
+                                    th:text="${producto.descripcion}">[Descripción]</span>
                             </p>
-
-                            <a th:href="@{/inventario/productos/editar/{id}(id=${producto.id_producto})}" class="btn btn-info btn-sm">Editar</a>
-                            <a th:href="@{/inventario/productos/{id}(id=${producto.id_producto})}" class="btn btn-danger btn-sm">Eliminar</a>
+                            <div class="d-flex justify-content-between">
+                                <a th:href="@{/inventario/productos/editar/{id}(id=${producto.id_producto})}"
+                                   class="btn btn-info btn-sm">Editar</a>
+                                <a th:href="@{/inventario/productos/{id}(id=${producto.id_producto})}"
+                                   class="btn btn-danger btn-sm">Eliminar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
+
+<!-- Scripts de Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
