--- a/src/main/resources/templates/administradores/administradores.html
+++ b/src/main/resources/templates/administradores/administradores.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/administradores}">
-            <span th:text="${usuario.rol.rol}">[Nombre del Rol]</span>
+            <span th:text="${session.usuario.rol.rol}">[Nombre del Rol]</span>
         </a>
     </div>
 </nav>
@@ -26,14 +26,17 @@
     <div class="row mb-4 align-items-center">
         <div class="col-md-4 text-center">
             <!-- Logo de la Empresa -->
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
-                 class="img-fluid mb-1" width="300" height="300">
+            <!--<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
+                 class="img-fluid mb-1" width="300" height="300">-->
         </div>
         <div class="col-md-8 text-start">
-            <h1 th:text="${usuario.empresa.razon_social}">[Nombre de la Empresa]</h1>
+            <!--<h1 th:text="${usuario.empresa.razon_social}">[Nombre de la Empresa]</h1>-->
+            <h1 th:text="${session.usuario.empresa.razon_social}">[Nombre de la Empresa]</h1>
             <p>
                 Bienvenido,
-                <span th:text="${usuario.nombre} + ' ' + ${usuario.apellido}">[Nombre del Administrador]</span>
+                <!--<span th:text="${usuario.nombre} + ' ' + ${usuario.apellido}">[Nombre del Administrador]</span>-->
+                <span th:text="${session.usuario.nombre} + ' ' + ${session.usuario.apellido}">[Nombre del Administrador]</span>
+
             </p>
         </div>
     </div>
@@ -44,13 +47,18 @@
                  class="img-fluid rounded-circle mb-3" width="100" height="100">
             <ul class="list-unstyled">
                 <li class="text-center mb-2">
-                    <span th:text="${usuario.nombre}">[Nombre del Usuario]</span>
+                    <!--<span th:text="${usuario.nombre}">[Nombre del Usuario]</span>-->
+                    <span th:text="${session.usuario.nombre}">[Nombre del Usuario]</span>
+
                 </li>
                 <li class="text-center mb-2">
-                    <span th:text="${usuario.apellido}">[Apellido del Usuario]</span>
+                    <!--<span th:text="${usuario.apellido}">[Apellido del Usuario]</span>-->
+                    <span th:text="${session.usuario.apellido}">[Apellido del Usuario]</span>
                 </li>
                 <li class="text-center mb-2">
-                    <span th:text="${usuario.usuario}">[Usuario del Usuario]</span>
+                    <!--<span th:text="${usuario.usuario}">[Usuario del Usuario]</span>-->
+                    <span th:text="${session.usuario.usuario}">[Usuario del Usuario]</span>
+
                 </li>
             </ul>
             <button class="btn btn-primary mt-3">Editar</button>
@@ -66,7 +74,7 @@
                     <a th:href="@{/inventario}" class="btn btn-lg btn-secondary w-100 py-4">Inventario</a>
                 </div>
                 <div class="col-md-6">
-                    <button class="btn btn-lg btn-secondary w-100 py-4">Personal</button>
+                    <a th:href="@{/personal}" class="btn btn-lg btn-secondary w-100 py-4">Personal</a>
                 </div>
                 <div class="col-md-6">
                     <button class="btn btn-lg btn-secondary w-100 py-4">Clientes</button>
