--- a/src/main/resources/templates/facturacion/facturas.html
+++ b/src/main/resources/templates/facturacion/facturas.html
@@ -19,8 +19,8 @@
     <div class="row mb-4 align-items-center">
         <!-- Logo de la Empresa -->
         <div class="col-md-3 text-center">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
-                 class="img-fluid mb-1" width="200" height="200">
+            <!--<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
+                 class="img-fluid mb-1" width="200" height="200">-->
         </div>
 
         <div class="col-md-9 d-flex justify-content-between align-items-center">
@@ -40,7 +40,6 @@
                        aria-label="Buscar">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
-
 
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div th:each="factura : ${facturas}" class="col">
@@ -72,8 +71,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
 </div>
