--- a/src/main/resources/templates/inventario/categorias.html
+++ b/src/main/resources/templates/inventario/categorias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Lista de Usuarios</title>
+    <title>Categorias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -20,14 +20,15 @@
                  class="img-fluid mb-1" width="200" height="200">-->
         </div>
         <div class="col-md-9 d-flex justify-content-between align-items-center">
-            <h1 class="mb-0">Usuarios</h1>
-            <a th:href="@{/personal/usuarios/crear}" class="btn btn-outline-secondary ms-auto">Nuevo Usuario</a>
+            <h1 class="mb-0">Categorías</h1>
+            <a th:href="@{/inventario/categorias/crear}" class="btn btn-outline-secondary ms-auto">Nueva Categoría</a>
         </div>
     </div>
 
+
     <div class="row">
         <div class="col-md-3">
-            <div th:insert="~{personal/navbar_vertical_personal :: navbar_vertical}"></div>
+            <div th:insert="~{inventario/navbar_vertical_inventario :: navbar_vertical}"></div>
         </div>
 
         <div class="col">
@@ -42,26 +43,19 @@
                     <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Usuario</th>
-                        <th>Empresa</th>
-                        <th>Rol</th>
-                        <th>Acciones</th>
+                        <th>Categoría</th>
+                        <th>IVA</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="usuario : ${usuarios}">
-                        <td th:text="${usuario.id_usuario}">ID</td>
-                        <td th:text="${usuario.nombre}">Nombre</td>
-                        <td th:text="${usuario.apellido}">Apellido</td>
-                        <td th:text="${usuario.usuario}">Usuario</td>
-                        <td th:text="${usuario.empresa.razon_social}">Empresa</td>
-                        <td th:text="${usuario.rol.rol}">Rol</td>
+                    <tr th:each="categoria : ${categorias}">
+                        <td th:text="${categoria.id_categoria}">ID</td>
+                        <td th:text="${categoria.categoria}">[Categoría]</td>
+                        <td th:text="${categoria.iva.iva}">[IVA]</td>
                         <td>
-                            <a th:href="@{/personal/usuarios/editar/{id}(id=${usuario.id_usuario})}"
+                            <a th:href="@{/inventario/categorias/editar/{id}(id=${categoria.id_categoria})}"
                                class="btn btn-info btn-sm">Editar</a>
-                            <a th:href="@{/personal/usuarios/{id}(id=${usuario.id_usuario})}"
+                            <a th:href="@{/inventario/categorias/{id}(id=${categoria.id_categoria})}"
                                class="btn btn-danger btn-sm">Eliminar</a>
                         </td>
                     </tr>
@@ -71,6 +65,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
