--- a/src/main/resources/templates/inventario/productos.html
+++ b/src/main/resources/templates/inventario/productos.html
@@ -19,8 +19,8 @@
     <div class="row mb-4 align-items-center">
         <!-- Logo de la Empresa -->
         <div class="col-md-3 text-center">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
-                 class="img-fluid mb-1" width="200" height="200">
+            <!--<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
+                 class="img-fluid mb-1" width="200" height="200">-->
         </div>
 
         <div class="col-md-9 d-flex justify-content-between align-items-center">
@@ -31,7 +31,7 @@
 
     <div class="row">
         <div class="col-md-3">
-            <div th:insert="~{administradores/navbar_vertical_inventario :: navbar_vertical}"></div>
+            <div th:insert="~{inventario/navbar_vertical_inventario :: navbar_vertical}"></div>
         </div>
 
         <div class="col-md-9">
