--- a/src/main/resources/templates/personal/editar_usuario.html
+++ b/src/main/resources/templates/personal/editar_usuario.html
@@ -21,12 +21,12 @@
         <div class="col-md-6 offset-md-3">
             <h2 class="mb-4 text-center">Editar Usuario</h2>
 
-            <form th:action="@{/usuarios/{id}(id=${usuario.id_usuario})}" th:object="${usuario}"
+            <form th:action="@{/personal/usuarios/{id}(id=${usuario.id_usuario})}" th:object="${usuario}"
                   method="post" class="needs-validation" novalidate>
 
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre:</label>
-                    <input type="text" id="nombre" th:field="*{nombre}" name="nombre"
+                    <input type="text" id="nombre" name="nombre" th:field="*{nombre}"
                            placeholder="Escriba el Nombre"
                            class="form-control" required>
                     <div class="invalid-feedback">
@@ -36,7 +36,7 @@
 
                 <div class="mb-3">
                     <label for="apellido" class="form-label">Apellido:</label>
-                    <input type="text" id="apellido" th:field="*{apellido}" name="apellido"
+                    <input type="text" id="apellido" name="apellido" th:field="*{apellido}"
                            placeholder="Escriba su Apellido"
                            class="form-control" required>
                     <div class="invalid-feedback">
@@ -46,7 +46,7 @@
 
                 <div class="mb-3">
                     <label for="usuario" class="form-label">Usuario:</label>
-                    <input type="text" id="usuario" th:field="*{usuario}" name="usuario"
+                    <input type="text" id="usuario" name="usuario" th:field="*{usuario}"
                            placeholder="Escriba su Usuario"
                            class="form-control" required>
                     <div class="invalid-feedback">
@@ -56,7 +56,7 @@
 
                 <div class="mb-3">
                     <label for="contrasena" class="form-label">Contraseña:</label>
-                    <input type="password" id="contrasena" th:field="*{contrasena}" name="contrasena"
+                    <input type="password" id="contrasena" name="contrasena" th:field="*{contrasena}"
                            placeholder="Escriba su Contraseña"
                            class="form-control" required>
                     <div class="invalid-feedback">
@@ -97,7 +97,7 @@
                 </div>
             </form>
             <div class="mt-3 text-center">
-                <a th:href="@{/usuarios}" class="btn btn-secondary">Volver a la lista de usuarios</a>
+                <a th:href="@{/personal/usuarios}" class="btn btn-secondary">Volver a la lista de usuarios</a>
             </div>
         </div>
     </div>
