--- a/src/main/resources/templates/personal/roles.html
+++ b/src/main/resources/templates/personal/roles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Lista de Usuarios</title>
+    <title>Lista de Roles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -20,10 +20,11 @@
                  class="img-fluid mb-1" width="200" height="200">-->
         </div>
         <div class="col-md-9 d-flex justify-content-between align-items-center">
-            <h1 class="mb-0">Usuarios</h1>
-            <a th:href="@{/personal/usuarios/crear}" class="btn btn-outline-secondary ms-auto">Nuevo Usuario</a>
+            <h1 class="mb-0">Roles</h1>
+            <a th:href="@{/personal/roles/crear}" class="btn btn-outline-secondary ms-auto">Nuevo Rol</a>
         </div>
     </div>
+
 
     <div class="row">
         <div class="col-md-3">
@@ -37,32 +38,23 @@
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
 
+
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <th>ID</th>
                         <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Usuario</th>
-                        <th>Empresa</th>
-                        <th>Rol</th>
                         <th>Acciones</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="usuario : ${usuarios}">
-                        <td th:text="${usuario.id_usuario}">ID</td>
-                        <td th:text="${usuario.nombre}">Nombre</td>
-                        <td th:text="${usuario.apellido}">Apellido</td>
-                        <td th:text="${usuario.usuario}">Usuario</td>
-                        <td th:text="${usuario.empresa.razon_social}">Empresa</td>
-                        <td th:text="${usuario.rol.rol}">Rol</td>
+                    <tr th:each="rol : ${roles}">
+                        <td th:text="${rol.id_rol}">ID</td>
+                        <td th:text="${rol.rol}">Rol</td>
                         <td>
-                            <a th:href="@{/personal/usuarios/editar/{id}(id=${usuario.id_usuario})}"
-                               class="btn btn-info btn-sm">Editar</a>
-                            <a th:href="@{/personal/usuarios/{id}(id=${usuario.id_usuario})}"
-                               class="btn btn-danger btn-sm">Eliminar</a>
+                            <a th:href="@{/personal/roles/editar/{id}(id=${rol.id_rol})}" class="btn btn-info btn-sm">Editar</a>
+                            <a th:href="@{/personal/roles/{id}(id=${rol.id_rol})}" class="btn btn-danger btn-sm">Eliminar</a>
                         </td>
                     </tr>
                     </tbody>
@@ -71,6 +63,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
