--- a/src/main/resources/templates/facturacion/facturas.html
+++ b/src/main/resources/templates/facturacion/facturas.html
@@ -64,7 +64,7 @@
                                 <a th:href="@{/facturacion/factura/editar/{id}(id=${producto.id_producto})}"
                                    class="btn btn-info btn-sm">Editar</a>
                                    -->
-                                <a th:href="@{/facturacion/factura/{id}(id=${factura.id_factura})}"
+                                <a th:href="@{/facturacion/factura/{id}(id=${factura.idFactura})}"
                                    class="btn btn-danger btn-sm">Eliminar</a>
                             </div>
                         </div>
