--- a/src/main/resources/templates/inicio_sesion.html
+++ b/src/main/resources/templates/inicio_sesion.html
@@ -35,7 +35,7 @@
                     <form th:action="@{/inicio_sesion}" method="post">
                         <div class="mb-3">
                             <label for="usuario" class="form-label">Usuario</label>
-                            <input type="text" class="form-control" id="usuario" name="usuario" required>
+                            <input type="text" class="form-control" id="usuario" name="usuario" autocomplete="off" required>
                         </div>
                         <div class="mb-3">
                             <label for="contrasena" class="form-label">Contraseña</label>
